[gd_scene load_steps=10 format=4 uid="uid://w270o86lb231"]

[ext_resource type="Script" uid="uid://dbfmjfnf6ulax" path="res://Objects/prepare_zone_gate.gd" id="1_0unpk"]
[ext_resource type="Texture2D" uid="uid://ibyydb01gn8o" path="res://Textures/test/p_gate.png" id="1_mwig2"]
[ext_resource type="Texture2D" uid="uid://sldltmirxrkq" path="res://Textures/BlockyLife/tileset.png" id="2_fq5ll"]
[ext_resource type="PackedScene" uid="uid://dpgmn2gntqjee" path="res://Utility/player_teleport.tscn" id="4_86oxv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2m21i"]
texture = ExtResource("2_fq5ll")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_u07xh"]
physics_layer_0/collision_layer = 32
physics_layer_0/collision_mask = 32
sources/0 = SubResource("TileSetAtlasSource_2m21i")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62b6r"]
size = Vector2(257, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldp2s"]
size = Vector2(127, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1yvt"]
size = Vector2(128, 32)

[node name="PrepareZoneGate" type="Node2D"]
script = ExtResource("1_0unpk")

[node name="GateRight" type="TileMapLayer" parent="."]
position = Vector2(128, 0)
tile_map_data = PackedByteArray("AAD4////AAACAAMAAAD4/wAAAAACAAMAAAD4/wEAAAACAAMAAAD4/wIAAAACAAMAAAD4/wMAAAACAAMAAAD4/wQAAAACAAMAAAD4/wUAAAACAAMAAAD4/wYAAAACAAMAAAD4/wcAAAACAAMAAAD4/wgAAAACAAMAAAD5////AAACAAMAAAD5/wAAAAACAAMAAAD5/wEAAAACAAMAAAD5/wIAAAACAAMAAAD5/wMAAAACAAMAAAD5/wQAAAACAAMAAAD5/wUAAAACAAMAAAD5/wYAAAACAAMAAAD5/wcAAAACAAMAAAD5/wgAAAACAAMAAAD6////AAACAAMAAAD6/wAAAAACAAMAAAD6/wEAAAACAAMAAAD6/wIAAAACAAMAAAD6/wMAAAACAAMAAAD6/wQAAAACAAMAAAD6/wUAAAACAAMAAAD6/wYAAAACAAMAAAD6/wcAAAACAAMAAAD6/wgAAAACAAMAAAD7////AAACAAMAAAD7/wAAAAACAAMAAAD7/wEAAAACAAMAAAD7/wIAAAACAAMAAAD7/wMAAAACAAMAAAD7/wQAAAACAAMAAAD7/wUAAAACAAMAAAD7/wYAAAACAAMAAAD7/wcAAAACAAMAAAD7/wgAAAACAAMAAAD8////AAACAAMAAAD8/wAAAAACAAMAAAD8/wEAAAACAAMAAAD8/wIAAAACAAMAAAD8/wMAAAACAAMAAAD8/wQAAAACAAMAAAD8/wUAAAACAAMAAAD8/wYAAAACAAMAAAD8/wcAAAACAAMAAAD8/wgAAAACAAMAAAD9////AAACAAMAAAD9/wAAAAACAAMAAAD9/wEAAAACAAMAAAD9/wIAAAACAAMAAAD9/wMAAAACAAMAAAD9/wQAAAACAAMAAAD9/wUAAAACAAMAAAD9/wYAAAACAAMAAAD9/wcAAAACAAMAAAD9/wgAAAACAAMAAAD+////AAACAAMAAAD+/wAAAAACAAMAAAD+/wEAAAACAAMAAAD+/wIAAAACAAMAAAD+/wMAAAACAAMAAAD+/wQAAAACAAMAAAD+/wUAAAACAAMAAAD+/wYAAAACAAMAAAD+/wcAAAACAAMAAAD+/wgAAAACAAMAAAD/////AAACAAMAAAD//wAAAAACAAMAAAD//wEAAAACAAMAAAD//wIAAAACAAMAAAD//wMAAAACAAMAAAD//wQAAAACAAMAAAD//wUAAAACAAMAAAD//wYAAAACAAMAAAD//wcAAAACAAMAAAD//wgAAAACAAMAAAA=")
tile_set = SubResource("TileSet_u07xh")

[node name="GateLeft" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4////AAACAAMAAAD4/wAAAAACAAMAAAD4/wEAAAACAAMAAAD4/wIAAAACAAMAAAD4/wMAAAACAAMAAAD4/wQAAAACAAMAAAD4/wUAAAACAAMAAAD4/wYAAAACAAMAAAD4/wcAAAACAAMAAAD4/wgAAAACAAMAAAD5////AAACAAMAAAD5/wAAAAACAAMAAAD5/wEAAAACAAMAAAD5/wIAAAACAAMAAAD5/wMAAAACAAMAAAD5/wQAAAACAAMAAAD5/wUAAAACAAMAAAD5/wYAAAACAAMAAAD5/wcAAAACAAMAAAD5/wgAAAACAAMAAAD6////AAACAAMAAAD6/wAAAAACAAMAAAD6/wEAAAACAAMAAAD6/wIAAAACAAMAAAD6/wMAAAACAAMAAAD6/wQAAAACAAMAAAD6/wUAAAACAAMAAAD6/wYAAAACAAMAAAD6/wcAAAACAAMAAAD6/wgAAAACAAMAAAD7////AAACAAMAAAD7/wAAAAACAAMAAAD7/wEAAAACAAMAAAD7/wIAAAACAAMAAAD7/wMAAAACAAMAAAD7/wQAAAACAAMAAAD7/wUAAAACAAMAAAD7/wYAAAACAAMAAAD7/wcAAAACAAMAAAD7/wgAAAACAAMAAAD8////AAACAAMAAAD8/wAAAAACAAMAAAD8/wEAAAACAAMAAAD8/wIAAAACAAMAAAD8/wMAAAACAAMAAAD8/wQAAAACAAMAAAD8/wUAAAACAAMAAAD8/wYAAAACAAMAAAD8/wcAAAACAAMAAAD8/wgAAAACAAMAAAD9////AAACAAMAAAD9/wAAAAACAAMAAAD9/wEAAAACAAMAAAD9/wIAAAACAAMAAAD9/wMAAAACAAMAAAD9/wQAAAACAAMAAAD9/wUAAAACAAMAAAD9/wYAAAACAAMAAAD9/wcAAAACAAMAAAD9/wgAAAACAAMAAAD+////AAACAAMAAAD+/wAAAAACAAMAAAD+/wEAAAACAAMAAAD+/wIAAAACAAMAAAD+/wMAAAACAAMAAAD+/wQAAAACAAMAAAD+/wUAAAACAAMAAAD+/wYAAAACAAMAAAD+/wcAAAACAAMAAAD+/wgAAAACAAMAAAD/////AAACAAMAAAD//wAAAAACAAMAAAD//wEAAAACAAMAAAD//wIAAAACAAMAAAD//wMAAAACAAMAAAD//wQAAAACAAMAAAD//wUAAAACAAMAAAD//wYAAAACAAMAAAD//wcAAAACAAMAAAD//wgAAAACAAMAAAA=")
tile_set = SubResource("TileSet_u07xh")

[node name="Wall" type="TileMapLayer" parent="."]
position = Vector2(128, 0)
tile_map_data = PackedByteArray("AAD//wgAAAADAAQAAAD//wcAAAADAAQAAAD//wYAAAADAAQAAAD//wUAAAADAAQAAAD//wQAAAADAAQAAAD//wMAAAADAAQAAAD//wIAAAADAAQAAAD//wEAAAADAAQAAADw/wEAAAADAAQAAADw/wIAAAADAAQAAADw/wMAAAADAAQAAADw/wQAAAADAAQAAADw/wUAAAADAAQAAADw/wYAAAADAAQAAADw/wcAAAADAAQAAADw/wgAAAADAAQAAAA=")
tile_set = SubResource("TileSet_u07xh")

[node name="PrepareDectectArea" type="Area2D" parent="."]
position = Vector2(0, -51)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PrepareDectectArea"]
shape = SubResource("RectangleShape2D_62b6r")

[node name="DectectArea" type="Area2D" parent="."]
position = Vector2(0, 80)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DectectArea"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_ldp2s")

[node name="DoorLeft" type="CharacterBody2D" parent="."]
position = Vector2(-64, 0)
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite2D" parent="DoorLeft"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_mwig2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorLeft"]
shape = SubResource("RectangleShape2D_w1yvt")

[node name="DoorRight" type="CharacterBody2D" parent="."]
position = Vector2(64, 0)
collision_layer = 32
collision_mask = 32

[node name="DoorLeft" type="Sprite2D" parent="DoorRight"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_mwig2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorRight"]
shape = SubResource("RectangleShape2D_w1yvt")

[node name="PlayerTeleport" parent="." instance=ExtResource("4_86oxv")]

[connection signal="tp_to_dest1" from="." to="PlayerTeleport" method="_on_prepare_zone_gate_tp_to_dest_1"]
[connection signal="body_entered" from="PrepareDectectArea" to="." method="_on_prepare_dectect_area_body_entered"]
[connection signal="body_entered" from="DectectArea" to="." method="_on_dectect_area_body_entered"]
